tests/snapshots/cli__tests__python-multiple-scopes.snap
---
source: tests/cli.rs
expression: "CommandSnap {\n    args,\n    stdin: stdin.map(|s|\n            s.split_inclusive('\\n').map(ToOwned::to_owned).collect_vec()),\n    stdout: stdout.split_inclusive('\\n').map(ToOwned::to_owned).collect_vec(),\n    exit_code,\n}"
info:
  stderr: []
---
args:
  - "--python"
  - def
  - "--python"
  - strings
  - A
stdin:
  - "# A comment\n"
  - "x = \"A string\"\n"
  - "def A(): return \"A string in a func\"\n"
  - "class A: pass"
stdout:
  - "3:def A(): return \"A string in a func\"\n"
exit_code: 0
