tests/snapshots/cli__tests__unsupported-named-entities-validated-at-parse-time.snap
---
source: tests/cli.rs
expression: "CommandSnap\n{\n    args, stdin: None, stdout:\n    stdout.split_inclusive('\\n').map(ToOwned::to_owned).collect_vec(),\n    exit_code,\n}"
info:
  stderr:
    - "error: the argument 'comments' cannot be used with 'a pattern ('InherentlyHaveNoNames')'"
    - ""
    - "For more information, try '--help'."
---
args:
  - "--rust"
  - comments~InherentlyHaveNoNames
stdin: ~
stdout: []
exit_code: 2
